--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -99,8 +99,9 @@
 	<label><%=_("Confirm Password")%></label>
 	<%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password", :class => "required", :onkeyup => "$('#adminForm').validate().element('#administrator_confirm_password');" %>
         </p>
-    <!-- this is a pre-generated placeholder for the validation messages -->
+    <!-- this is a pre-generated placeholder for the validation messages
     <p><label for="administrator_confirm_password" generated="true" class="error"></label></p>
+    -->
     </fieldset>
     <fieldset>
         <legend><%= _("Mail Setup for User 'root'") -%></legend>
