fix showing license with show_only tag (bnc#603634)

--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -47,7 +47,7 @@
   <div class="eula-text-area"><%= @eula.text %></div>
   </p>
   <% if @eula.only_show %>
-  <%=  f.hidden_field :accepted, :true %>
+  <%=  hidden_field_tag :accepted, "true" %>
   <% else %>
   <p>
   <%=  f.radio_button :accepted, :true, :checked => @eula.accepted, :readonly => disabled, :disabled => disabled %>
