visual progress indication (bnc#600764)

--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -137,9 +137,10 @@ function members_validation(which){ return true; }
     </p>
     <p><%= f.hidden_field :group_type %><label id="users-error" class="error"></label></p>
     <div class="nav-buttons">
+    <div id="progress_<%= group.cn -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
       <%= submit_tag _("Save") %>
       <% if @permissions[:groupdelete] %>
-      <span onclick="delete_handler(this);">
+      <span onclick="delete_handler(this, '#progress_<%= group.cn -%>');">
         <%= link_to _("Delete"),
                     {:action => 'destroy', :id => group.cn},
                     {:confirm => _("Are you sure to delete group '%s'?") % group.cn, :method => :destroy, :class => :button} %>
