--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -164,7 +164,7 @@ function def_group_validation(which){ return true; }
 
 <div class='pad1_2em'>
 <% if @permissions[:useradd] %>
-<%= link_to _("Add New User"), :action => :new, :onclick=>"$('#progress').show()" -%>
+<%= link_to _("Add New User"), :action => :new -%>
 <% end %>
 
  <div id="users" class="accordion">
@@ -274,9 +274,10 @@ function def_group_validation(which){ return true; }
       </fieldset>
 </div>
      <div class="nav-buttons">
+    <div id="progress_<%= user.uid -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
        <%= submit_tag _("Save"), :onclick=>"return edit_user_validation(this, '"+user.uid+"');"  %>
        <% if @permissions[:userdelete] %>
-         <span onclick="delete_handler(this);">
+         <span onclick="delete_handler(this, '#progress_<%= user.uid -%>');">
            <%= link_to _("Delete"),
                        {:action => 'destroy', :id => user.uid},
                        {:confirm => _("Are you sure to delete user '%s'?") % user.uid, :method => :destroy, :class => :button} %>
