fix name of writing permission for licenses (bnc#604620)

--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -18,7 +18,7 @@
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
-<% disabled = ! @permissions[:write] %>
+<% disabled = ! @permissions[:accept] %>
 <% content_for :head do %>
   <style>
     .eula-text-area {
