--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -103,7 +103,7 @@ function members_validation(which){ return true; }
       <label><%=_("Members")%></label>
       <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);" %>
       <% if @permissions[:usersget] == true %>
-        <a href="#" class="button" onClick="select_users_open('');return false;">Manage Memebers</a>
+        <a href="#" class="button" onClick="select_users_open('');return false;"><%= _("Manage Members") -%></a>
       <% end %>
     </p>
     <p><%= f.hidden_field :group_type %><label id="users-error" class="error"></label><p>
