users/groups - consistency link to each other (bnc#605057)

--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -158,7 +158,8 @@ function members_validation(which){ return true; }
 
   <div class="nav-buttons">
     <%= form_back_button -%>
+    <%= form_str_spacer %>
+    <%= link_to "Manage Users", "controller" => "users" %>
   </div>
-<%= link_to "Manage Users", "controller" => "users" %>
 </div>
 
