mark string for translation (bnc#603767)

--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -159,7 +159,7 @@ function members_validation(which){ return true; }
   <div class="nav-buttons">
     <%= form_back_button -%>
     <%= form_str_spacer %>
-    <%= link_to "Manage Users", "controller" => "users" %>
+    <%= link_to _("Manage Users"), "controller" => "users" %>
   </div>
 </div>
 
