--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -33,12 +33,9 @@ BG Grey:            #fcfcfc     Body-BG
 
 /* html, */ /* unnecessary property, causes inheritance  */
 body {
-
-/* 2 different colors for body???    */
-/*   background-color: #fcfcfc;  */
   background-color: #f5f5f5;  /* BG Grey: #fcfcfc is taken see example above */
   color: #333;
-  font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif;
+  font-family: Trebuchet MS, Helvetica, sans-serif;
   width: 100%;
   height: 99%;
   margin: 0;
@@ -103,8 +100,7 @@ a.button, input.button, input[type="submit"], input[type="button"] {
   background: #eee url(images/button-bg-rollover.gif) repeat-x scroll center top;
   color: #333;
   font-size: 13px;
-/*   font-family: Verdana, "Trebuchet MS","lsLucida Grande"; */
-  font-family: "Trebuchet MS","lsLucida Grande"; 
+  font-family: Trebuchet MS, Helvetica, sans-serif;
   font-weight: bold;
   border: 1px solid #999;
   cursor: pointer;
