--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -97,7 +97,7 @@ function members_validation(which){ return true; }
   <fieldset>
     <p>
       <label><%=_("Group Name")%></label>
-      <%= f.text_field :cn, :disabled => false %>
+      <%= f.text_field :cn, :disabled => false, :class => "required" %>
     </p>
     <p>
       <label><%=_("Members")%></label>
@@ -111,7 +111,7 @@ function members_validation(which){ return true; }
 
   <div class="nav-buttons">
     <div id="progress_" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
-    <%= submit_tag _("Save") %>
+    <%= submit_tag _("Save"), :onclick=>"return $('#form_').valid();" %>
     <%= form_str_spacer %>
 	 <%= form_cancel_button :action => :index %>
   </div>
