fix issue with missing bug url and also use cleaner way to define it (bnc#607090)

--- a/webclient/app/views/shared/exception_trap.html.erb
+++ b/webclient/app/views/shared/exception_trap.html.erb
@@ -28,7 +28,7 @@
   <%= h error.message %>
 </pre></p>
 
-<p><span class="bug-icon"></span><%= _("Please Report a bug so we can fix the problem!.") %><a target="_blank" href="<%= @bug_url %>"><%= _("(report link)") %></a></p>
+<p><span class="bug-icon"></span><%= _("Please Report a bug so we can fix the problem!.") %><a target="_blank" href="<%= controller.class.bug_url %>"><%= _("(report link)") %></a></p>
 <p><%= _("Don't forget to include the bug details.") %></p>
 
   <%
